testsuite/tests/lexical_envs/invalid_subunit_root/bad_main_rule_1.lkt
grammar foo_grammar {
    @main_rule main_rule <- ExampleWrapper(
        ASTList[Example]+(Example("example"))
    )
}
